--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,14 +1,9 @@
-<div>
-    <div class="navBar"></div>
+
+  <div class="navBar"></div>
   <div class="nav_Detail">
-    <div class="nav_Buttons">
-        <div class="create" (click)="onClick()">Create New List</div>
-        <div class="view">View Lists</div>
-
-    </div>
-    <div class="login">Login/Sign Up</div>
+  <div class="nav_Buttons">
+      <div class="create" (click)="CreateList()">Create New List</div>
+      <div class="view" (click)="ViewLists()">View Lists</div>
   </div>
-</div>
-
-
-  <router-outlet></router-outlet>
+  <div class="login" (click)="Login()">Login/Sign Up</div>
+  </div>
