--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,5 +1,68 @@
 input{
   cursor: pointer;
-  width: 300px;
+  width: 450px;
   height: 25px;
+}
+
+.search_results{
+  margin: 0 auto;
+  margin-top: -16px;
+  background-color:white;
+  width: 456px;
+}
+
+.search_cell{
+  cursor: pointer;
+  background-color:white;
+  margin-top: -15px;
+  width:100%;
+  height:50px;
+
+}
+
+.search_cell>img{
+  height:100%;
+  float: left;
+}
+
+.search_cell > p{
+  padding-top: 15px;
+
+}
+
+.collection_selection{
+    float: left;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 400px;
+    height: 250px;
+    margin-top: 80px;
+    margin-left: 36px;
+    position: fixed;
+}
+
+.back{
+  cursor:point;
+  user-select: none;
+  float: right;
+  margin-top: -33px;
+  margin-right: 8px;
+}
+
+.save_collection{
+  width: 100%;
+  height: 28px;
+  background-color: green;
+  color: white;
+  border-radius: 0px 0px 9px 9px;
+  cursor: point;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  margin-top: 179px;
+  padding-top: 9px;
+  text-align: center;
+  float: center;
 }
