--- a/src/app/hero-form/hero-form.component.css
+++ b/src/app/hero-form/hero-form.component.css
@@ -1,8 +1,10 @@
 .container{
+  background-color: white;
   padding-top: 31px;
   width: 300px;
   height: 83px;
   text-align: center;
   margin: 0 auto;
-  margin-top: 15px;
+  margin-top: 80px;
+  position: fixed;
 }
