--- a/src/app/login-signup/login-signup.component.html
+++ b/src/app/login-signup/login-signup.component.html
@@ -1,3 +1,3 @@
-<div class="login_page">
-  <app-hero-form></app-hero-form>
+<div class="login_page" (click)="Dismiss()">
 </div>
+<app-hero-form></app-hero-form>
