--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -5,15 +5,16 @@ placeholder="Search..."
 ng-model="search"
 id="search"/>
 
-<div *ngIf="DisplayCollections" class="collection_selection">
+<form submit="SaveCollection($event)" *ngIf="DisplayCollections" class="collection_selection">
   <p>Collections</p>
   <div class="back" (click)="CloseCollections()">Return</div>
   <hr/>
-  <div *ngFor="let element of Collections" class="collection_cells">
-    <input type="radio" name="list" value={{element.list_name}}> {{element.list_name}}}
+
+  <div *ngFor="let key of keys()" class="collection_cells">
+    <input type="radio" name="list" value={{element.list_name}} value="key">
   </div>
-  <div class="save_collection" (click)="SaveCollection()">Save</div>
-</div>
+  <button type="submit" class="save_collection">Save</button>
+</form>
 
 <div *ngIf="SearchResults.length > 0" class="search_results">
 
