Updating to most recent version for push

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
+
 <div *ngIf = "!DisplayLogin" class="main" (click)="Clicked()">
     <app-sidebar [Collections] = "Collections"></app-sidebar>
     <app-content [LoggedIn]="LoggedIn" [Collections] = "Collections"></app-content>
-
 </div>
 <app-login-signup *ngIf = "DisplayLogin"></app-login-signup>
 
-<!-- <router-outlet></router-outlet> -->
+<router-outlet> </router-outlet>
