--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
 <div *ngIf = "!DisplayLogin" class="main" (click)="Clicked()">
     <app-sidebar [Collections] = "Collections"></app-sidebar>
-    <app-content [LoggedIn]="LoggedIn" [Collections] = "Collections"></app-content>
+    <app-content [LoggedIn]="LoggedIn" [Collections] = "Collections" [SearchResults] = "SearchResults"></app-content>
+
+
 </div>
 <app-login-signup *ngIf = "DisplayLogin"></app-login-signup>
 
