--- a/src/app/hero-form/hero-form.component.css
+++ b/src/app/hero-form/hero-form.component.css
@@ -1,10 +1,18 @@
 .container{
   background-color: white;
-  position: fixed;
   text-align: center;
   margin: 0 auto;
   margin-top: 80px;
   padding-top: 31px;
   width: 300px;
   height: 83px;
+}
+
+.dismiss{
+  margin-top: -27px;
+  margin-right: 9px;
+  cursor: pointer;
+  user-select: none;
+  float: right;
+  top: -7px;
 }
