--- a/src/app/hero-form/hero-form.component.html
+++ b/src/app/hero-form/hero-form.component.html
@@ -1,4 +1,5 @@
 <div class="container" >
+  <div class="dismiss" (click)="Dismiss()">X</div>
     <form #f="ngForm" #heroForm="ngForm">
       <div class="form-group">
         <label for="name">Email</label>
