--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -29,12 +29,12 @@
 
 .collections{
   width:100%;
-  margin-top: 65px;
+  margin-top: 83px;
 }
 
 .collections_cell{
   border-radius: 0px 32px 32px 0px;
-  margin-top: 3px;
+  margin-top: -16px;
   width: 97%;
   height: 35px;
   background-color: white;
@@ -45,6 +45,13 @@
   height: 33px;
   width: 285px;
   border: none;
+}
+
+.collections_cell > p{
+  padding-top: 7px;
+  padding-left: 8px;
+  text-align: left;
+  font-size: 18px;
 }
 .add_collections{
   float: right;
