--- a/src/app/movie-view/movie-view.component.css
+++ b/src/app/movie-view/movie-view.component.css
@@ -1,7 +1,44 @@
 .movie_view{
   background-color: #121212;
+  margin-top: 56px;
   text-align: center;
   float: right;
-  width: 73%;
+  width: 100%;
   height: 100vh;
+}
+
+.movie_cell{
+  background-color: #383838;
+  margin: 0 auto;
+  margin-top: 1px;
+  height: 111px;
+  width: 85%;
+}
+
+.movie_cell > img {
+  height: 100%;
+  float: left;
+}
+
+.movie_cell > p {
+  float: left;
+  margin-top: 43px;
+  margin-left: 25px;
+  font-size: 20px;
+  color: white;
+}
+
+.delete_movie{
+  cursor: pointer;
+  user-select: none;
+  float: right;
+  color: black;
+  background-color: white;
+  margin-top: 0px;
+  height: 100%;
+  width: 63px;
+}
+
+.delete_movie > h1{
+  margin-top: 37px;
 }
