--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -33,6 +33,8 @@
 }
 
 .collections_cell{
+  cursor: pointer;
+    user-select: none;
   border-radius: 0px 32px 32px 0px;
   margin-top: -16px;
   width: 97%;
