--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,4 +1,4 @@
-input{
+#search{
   cursor: pointer;
   width: 450px;
   height: 25px;
@@ -40,6 +40,14 @@ input{
   height: 250px;
 }
 
+.collection_cells > input{
+  float: left;
+}
+.collection_cells > input:nth-child(1){
+  float: left;
+  margin-left: 14px;
+}
+
 .back{
   cursor:point;
   user-select: none;
@@ -49,18 +57,24 @@ input{
 }
 
 .save_collection{
-  cursor: point;
-  background-color: green;
-  color: white;
+  cursor: pointer;
+  user-select: none;
   text-align: center;
-  float: center;
+  background-color: green;
+  border-color: green;
+  color: white;
+  position: relative;
   padding-top: 9px;
-  margin-top: 179px;
+  margin-top: 134px;
   width: 100%;
-  height: 28px;
+  height: 38px;
   border-radius: 0px 0px 9px 9px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none;
+}
+
+.save_collection > p{
+  margin-top: 0px;
+  font-size: 16px;
 }
